Fixed barchat position on Firefox

--- a/app/scss/home/fiveReasons/_informationalAdvantage.scss
+++ b/app/scss/home/fiveReasons/_informationalAdvantage.scss
@@ -9,6 +9,7 @@
       height: calc(100% - 45px);
       position: absolute;
       bottom: 0;
+      right: 0;
       div {
         width: 60px;
         margin: 0 10px;
